# sdlccp-bak

./: Cargo.toml  README.md
schema-generator/: Cargo.toml
schema-generator/src/: main.rs
schemas/json/: attestation_schema.json  builddetails_schema.json  deploydetails_schema.json  deployed_schema.json  developmentdetails_schema.json  draft_schema.json  inprogress_schema.json  packagedetails_schema.json  phasedetails_schema.json  policy_schema.json  policycheckfailed_schema.json  policycheckpending_schema.json  releasable_schema.json  released_schema.json  releasestate_schema.json  revoked_schema.json  runtimedetails_schema.json  sdlc_cp_api_model_sdlc_release_sdlcrelease<sdlc_cp_api_model_phase_build, sdlc_cp_api_model_state_draft>_schema.json  sdlc_cp_api_model_sdlc_release_sdlcrelease<sdlc_cp_api_model_phase_build, sdlc_cp_api_model_state_policycheckfailed>_schema.json  sdlc_cp_api_model_sdlc_release_sdlcrelease<sdlc_cp_api_model_phase_build, sdlc_cp_api_model_state_policycheckpending>_schema.json  sdlc_cp_api_model_sdlc_release_sdlcrelease<sdlc_cp_api_model_phase_deploy, sdlc_cp_api_model_state_draft>_schema.json  sdlc_cp_api_model_sdlc_release_sdlcrelease<sdlc_cp_api_model_phase_deploy, sdlc_cp_api_model_state_policycheckfailed>_schema.json  sdlc_cp_api_model_sdlc_release_sdlcrelease<sdlc_cp_api_model_phase_deploy, sdlc_cp_api_model_state_policycheckpending>_schema.json  sdlc_cp_api_model_sdlc_release_sdlcrelease<sdlc_cp_api_model_phase_development, sdlc_cp_api_model_state_draft>_schema.json  sdlc_release_development_draft_schema.json  sdlc_release_development_published_schema.json  sdlcphase_schema.json  (+12 more)
sdlc-cp-api-macro/: Cargo.toml
sdlccp-api/: Cargo.toml
sdlccp-api-macro/: Cargo.toml
sdlccp-schema-generator/: Cargo.toml
sdlccp-server/: Cargo.toml
sdlccp-server/src/: main.rs
sdlccp-services/: Cargo.toml
src/: lib.rs
(+75 files in other folders)
