[package]
name = "sdlccp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
sdlc-cp-api = { path = ".." }
serde = { version = "1.0.210", features = ["derive", "rc"] }
tokio = { version = "1.40.0", features = ["full"] }
utoipa = "4.2.3"
utoipa-rapidoc = "4.0.0"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
